--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,63 @@
 <footer class="footer">
-  <div>Hello footer!</div>
+  <div class="footer__container">
+    <div class="footer__body">
+      <div class="footer__top">
+        <div class="footer__columns">
+          <div class="footer__column">
+            <div class="footer__logo">
+              <img src="@img/header/logo.svg" alt="" />
+            </div>
+            <div class="footer__info">
+              <div class="footer__row">
+                <span>Phone</span><a class="footer__link" href="tel:+76195510828">619-551-0828</a></div>
+              <div class="footer__row">
+                <span>E-mail</span> <a class="footer__link" href="mailto: info@electrica-inc.com">info@electrica-inc.com</a>
+              </div>
+              <div class="footer__row">
+                <span>Adress</span>
+               <a class="footer__link" href="">3534 Caminito El Rincon #41 San Diego, CA 92130</a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__column">
+            <div class="footer__block footer__who-we">
+              <div  class="footer__name-block ">Who we are</div>
+              <ul class="footer__list">
+                <li><a href="" class="footer__link">About us</a></li>
+                <li><a href="" class="footer__link">Resources</a></li>
+                <li><a href="" class="footer__link">Blog</a></li>
+                <li><a href="" class="footer__link">Careers</a></li>
+              </ul>
+            </div>
+            <div class="footer__icons">
+              <a href="" class="footer__icon">
+                <img src="@img/footer/inst.svg" alt="" />
+              </a>
+              <a href="" class="footer__icon">
+                <img src="@img/footer/facebook.svg" alt="" />
+              </a>
+              <a href="" class="footer__icon">
+                <img src="@img/footer/twit.svg" alt="" />
+              </a>
+            </div>
+          </div>
+          <div class="footer__column footer__what-we">
+            <div class="footer__name-block">What we do</div>
+            <ul class="footer__list">
+              <li><a href="" class="footer__link">Residential</a></li>
+              <li><a href="" class="footer__link">Commercial</a></li>
+              <li><a href="" class="footer__link">Industrial</a></li>
+              <li><a href="" class="footer__link">Design-Build</a></li>
+              <li><a href="" class="footer__link">Service </a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copyright">
+          © 2018 Electrica, Inc. All rights reserved
+        </p>
+      </div>
+    </div>
+  </div>
 </footer>
