--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,6 +14,7 @@
           <span></span>
         </button>
         <nav class="menu__body">
+          <div class="menu__name">Who we are</div>
           <ul class="menu__list">
             <li class="menu__item">
               <a href="" class="menu__link">About us</a>
@@ -26,11 +27,20 @@
               <a href="" class="menu__link">Careers</a>
             </li>
           </ul>
+          <div class="menu__name">What we do</div>
+          <div data-da=".header, 991, 1" class="header__bottom">
+            <ul class="header__list">
+            <li class="header__item"><a href="" class="header__link"> Residential</a></li>
+            <li class="header__item"><a href="" class="header__link"> Commercial</a></li>
+            <li class="header__item"><a href="" class="header__link">Industrial</a></li>
+            <li class="header__item"><a href="" class="header__link">Design-Build</a></li>
+            <li class="header__item"><a href="" class="header__link">Service</a></li></ul>
+          </div>
           <div class="header__emergency">
             <img class="emergency__icon" src="@img/header/24-7.svg" alt="" />
             <div class="emergency__content">
               <p class="emergency__text">Emergency number</p>
-              <p class="emergency__number">000-000-00</p>
+              <a href="tel:+7000-000-00" class="emergency__number">000-000-00</a>
             </div>
           </div>
         </nav>
@@ -41,12 +51,5 @@
       </div>
     </div>
   </div>
-  <div class="header__bottom">
-    <ul class="header__list">
-    <li class="header__item"><a href="" class="header__link"> Residential</a></li>
-    <li class="header__item"><a href="" class="header__link"> Commercial</a></li>
-    <li class="header__item"><a href="" class="header__link">Industrial</a></li>
-    <li class="header__item"><a href="" class="header__link">Design-Build</a></li>
-    <li class="header__item"><a href="" class="header__link">Service</a></li></ul>
-  </div>
+
 </header>
