--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,9 +2,30 @@
   <div class="header__body">
     <div class="header__container">
       <div class="header__search search">
-        <div class="search__icon">
-          <img src="@img/header/search.svg" alt="" />
-        </div>
+        <button class="search__icon">
+          <!-- <img src="@img/header/search.svg" alt="" /> -->
+          <svg
+            width="32"
+            height="32"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <rect opacity="0.01" width="32" height="32" fill="#EEEEEE" />
+            <path
+              class="icon-search icon"
+              d="M21 14C21 17.866 17.866 21 14 21C10.134 21 7 17.866 7 14C7 10.134 10.134 7 14 7C17.866 7 21 10.134 21 14Z"
+              stroke="#979797"
+              stroke-width="2"
+            />
+            <path
+              class="icon-search icon"
+              d="M19 19L24.5 24.5"
+              stroke="#979797"
+              stroke-width="2"
+            />
+          </svg>
+        </button>
         <div class="search__body">
           <input class="search__input input__form" type="search" />
         </div>
@@ -30,26 +51,37 @@
           <div class="menu__name">What we do</div>
           <div data-da=".header, 991, 1" class="header__bottom">
             <ul class="header__list">
-            <li class="header__item"><a href="" class="header__link"> Residential</a></li>
-            <li class="header__item"><a href="" class="header__link"> Commercial</a></li>
-            <li class="header__item"><a href="" class="header__link">Industrial</a></li>
-            <li class="header__item"><a href="" class="header__link">Design-Build</a></li>
-            <li class="header__item"><a href="" class="header__link">Service</a></li></ul>
+              <li class="header__item">
+                <a href="" class="header__link"> Residential</a>
+              </li>
+              <li class="header__item">
+                <a href="" class="header__link"> Commercial</a>
+              </li>
+              <li class="header__item">
+                <a href="" class="header__link">Industrial</a>
+              </li>
+              <li class="header__item">
+                <a href="" class="header__link">Design-Build</a>
+              </li>
+              <li class="header__item">
+                <a href="" class="header__link">Service</a>
+              </li>
+            </ul>
           </div>
           <div class="header__emergency">
             <img class="emergency__icon" src="@img/header/24-7.svg" alt="" />
             <div class="emergency__content">
               <p class="emergency__text">Emergency number</p>
-              <a href="tel:+7000-000-00" class="emergency__number">000-000-00</a>
+              <a href="tel:+7000-000-00" class="emergency__number"
+                >000-000-00</a
+              >
             </div>
           </div>
         </nav>
-
       </div>
       <div class="header__logo">
         <img src="@img/header/logo.svg" alt="" />
       </div>
     </div>
   </div>
-
 </header>
